--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
-name: Your New Jekyll Site
+name: Soumya Ray's Website
 markdown: redcarpet
 redcarpet:
   extensions: ["no_intra_emphasis", "fenced_code_blocks", "autolink", "tables", "with_toc_data"]
